# protoc-gen-py-pkg

./: Cargo.toml  README.md  build.rs  go.mod  go.sum  py_package.proto
examples/: pyproject.toml
examples/output/: py_package.proto
examples/output/examples/v1/: foo.proto  foo_pb2.py
examples/output/google/protobuf/: descriptor.proto
examples/proto/v1/: bar.proto  foo.proto
examples/src/: py_package_pb2.py
examples/src/foo/: __init__.py
examples/src/foo/examples/: __init__.py
examples/src/foo/examples/proto/: __init__.py
examples/src/foo/examples/proto/v1/: __init__.py  bar_pb2.py  foo_pb2.py  py_package_pb2.py
examples/v1/: foo.proto
proto/: go.mod  py_package.pb.go
protos/: py_package.pb.go  py_package.proto
src/: lib.rs  main.rs  py_package_imports.py  py_package_imports.txt  py_top_py_package_versioned_imports.py
src/protos/: mod.rs  py_package.rs
